# Page-loader

./: README.md  makefile  pyproject.toml
.github/workflows/: GitHub_CI.yml  hexlet-check.yml
page_loader/: __init__.py  args.py  constants.py  engine.py  file.py  formaters.py  html_builder.py  http.py  logging.py  parser.py  url_formatter.py
page_loader/scripts/: __init__.py  page_loader.py
tests/: test_answer_text.py  test_html_builder.py  test_page_loader_version.py  test_parsing.py  test_request.py  test_requests.py
tests/fixtures/: minimal_page.html  parsed_minimal_page.html  parsed_ru-hexlet-io-courses.html  ru-hexlet-io-courses.html
