[tool.poetry]
name = "hexlet-code"
version = "0.1.1"
description = "Web scraper"
authors = ["Chashin Efim <69835249+NONVME@users.noreply.github.com>"]
packages = [
  { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"
requests_mock = "^1.8.0"
html5lib = "^1.1"
progress = "^1.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
coverage = "^5.3.1"
pytest-cov = "^2.10.1"
yapf = "^0.30.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"
